app/assets/stylesheets/review.scss
@mixin diff-pre-block {
  white-space: pre;
      display: block;
}

// - - - - - - - - - - - - - - - - - - - - - - - - - - -

.no-title .ui-dialog-titlebar { display: none; }

#review-page { margin: { top: 15px; } }

#review-page, #review-dialog {

  @include non-code-font();
     padding: none;
  background: $darker-color;
       color: $lighter-color;

  #review-traffic-lights {
       display: block;
        margin: { left: 4px; right: 0px; top: 5px; }
         width: 737px;
    overflow-x: auto;
    &::-webkit-scrollbar:horizontal { height: 1px; }
    .traffic-light {
      display: table-cell;
      padding: { top: 2px; right: 2px; }
       cursor: pointer;
      img { width: 22px; height: 29px; }
    }
    .traffic-light-count {
      position: relative;
      top: -3px;
    }
  }

  #navigate-control {

    @include right-align(0px);

    #avatar {
      @include rounded-corner(4px);
       width: 38px;
      height: 38px;
      border: 1px solid lighten($darker-color, 15%);
    }

    #now-tag-number {
      @include rounded-corner(4px);
       font-size: 20px;
      background: lighten($darker-color, 15%);
           color: $lighter-color;
      text-align: center;
           width: 38px;
          height: 32px;
         padding: { top: 8px; }

      &.red       { color: $red;   }
      &.amber     { color: $amber; }
      &.green     { color: $green; }
      &.timed_out { color: Gray;   }
    }

    #prev-avatar img, #next-avatar img, #prev-tag img, #next-tag img {
      @include rounded-corner(4px);
        width: 20px;
       height: 20px;
      padding: { top: 2px; bottom: 0px; }
    }

    #prev-avatar img, #prev-tag img { padding: { right: 4px; left: 0px; } }
    #next-avatar img, #next-tag img { padding: { left: 4px; right: 0px; } }

    .triangle.button {
      width: 30px;
      height: 30px;
      padding: 0px;
      border: 1px solid lighten($darker-color,6%);
      &:hover { border: 1px dotted lighten($darker-color,20%); }
      &[disabled] {
        background: lighten($darker-color, 30%);
        &:hover { border: 1px solid lighten($darker-color,6%); }
      }
    }
  } // .navigate-control

  #diff-filenames {

    @include right-align(0px);
    height: 490px;
    margin: { top: 5px; }

    // make scrollbars invisible
    overflow-x: auto;
    overflow-y: auto;
    &::-webkit-scrollbar:vertical { width: 0px; }
    &::-webkit-scrollbar:horizontal { height: 0px; }

    font-size: 11pt;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;

    .filename {
      // total height has to be the same as
      // diff-(added/deleted)-line-counts so
      // they vertically align
       height: 16px;
      padding: { right: 3px; top: 0px; bottom: 4px; }
       border: 1px solid $darker-color;
       margin: { bottom: 2px; }
      &[data-filename='output'] { margin-top: 20px; } // mimic test-page file-knave
    }
  }

  .diff-line-numbers, .diff-sheet {
    @include code-font();
    background: lighten($darker-color, 3%);
        height: 572px;
        margin: 0px;
       padding: 0px;
        cursor: default;
    ln { margin: { left : 4px; right: 3px; } font-weight: normal; }
    added, deleted, same { @include diff-pre-block; }
    added   { color: $diff-added-color; }
    deleted { color: $diff-deleted-color; }
    same    { color: $lighter-color; }
  }

  .diff-line-numbers {
         width: 40px;
        margin: { left: 2px; }
    text-align: right;
      overflow: hidden;
         color: lighten($darker-color, 10%);
        border: none;

    position: relative; // lose 1px gap to file-content
        left: 2px;

    border-top-left-radius: 5px;
    added   { &:after { content: '+'; } }
    deleted { &:after { content: '-'; } }
    same    { &:after { content: '='; } }
    same    { color: lighten($darker-color,20%); }
  }

  .diff-sheet {
         width: 705px;
    text-align: left;
    overflow-x: auto;
    overflow-y: auto;
    &::-webkit-scrollbar:vertical { width: 7px; }
    // If the horizontal scrollbar has any height you lose
    // the vertical scroll-alignment with the line-numbers.
    // So make the horizontal scrollbar invisible whilst
    // retaining its functionality.
    &::-webkit-scrollbar:horizontal { height: 0px; }
    outline: none;
     border: none;
    padding: { left: 2px; }
    added, deleted, same { padding-left: 3px; }
    :hover { background: lighten($darker-color,10%); }
  }

  .diff-deleted-line-count, .diff-added-line-count {
    @include rounded-corner(4px);
    @include right-align(0px);
    @include diff-line-count;
    color: $darker-color;
    border: 1px solid lighten($darker-color,6%);
    &:hover { border: 1px dotted lighten($darker-color,6%); }
    &[disabled]:hover { border: 1px solid lighten($darker-color,6%); }
    cursor: pointer;

    &.none { color: transparent; }

    &[disabled] {
      background: lighten($darker-color,10%);
      cursor: default;
    }

    &[data-filename='output']
    {
      // mimic test-page file-knave
      margin: { top: 15px; bottom: 15px; }
    }

  }

  .diff-deleted-line-count {
    background: $diff-deleted-color;
    &[disabled].some { color: lighten($diff-deleted-color,5%); }
  }
  .diff-deleted-line-count.none {
    background: lighten($darker-color,10%);
  }

  .diff-added-line-count {
    background: $diff-added-color;
    &[disabled].some { color: lighten($diff-added-color,5%); }
  }
  .diff-added-line-count.none {
    background: lighten($darker-color,10%);
  }

  #diff-checkbox-container {
    @include edged-panel();
    width: 61px;
    padding: { top: 2px; bottom: 2px; }
    #diff-checkbox-title {
      font-size: 14px;
        display: inline;
        position: relative; bottom: 2px;
    }
    margin: { top: 5px; }
  }

  #buttons {
    position: absolute; top: 40px; left: 10px;
    #fork-button, #revert-button, #download-button, #close-button {
      @include non-code-font();
      font-size: 13px;
      width: 75px;
      margin: { left: 3px; bottom: 2px; }
      text-align: right;
      padding: { right: 7px; bottom: 3px; }
    }
  }

}

